rust/tests/snapshots/prism_nodes_test__begin_rescue.snap
---
source: tests/prism_nodes_test.rs
expression: result.inspect()
---
@ DocumentNode (location: (1:0)-(1:67))
└── children: (1 item)
    └── @ ERBBeginNode (location: (1:0)-(1:67))
        ├── tag_opening: "<%" (location: (1:0)-(1:2))
        ├── content: " begin " (location: (1:2)-(1:9))
        ├── tag_closing: "%>" (location: (1:9)-(1:11))
        ├── prism_node: 
        │   └── @ BeginNode (location: (0,3)-(0,64))
        │       ├── begin_keyword_loc: (0,3)-(0,8) = "begin"
        │       ├── statements: nil
        │       ├── rescue_clause:
        │       │   @ RescueNode (location: (0,35)-(0,41))
        │       │   ├── keyword_loc: (0,35)-(0,41) = "rescue"
        │       │   ├── exceptions: (length: 0)
        │       │   ├── operator_loc: nil
        │       │   ├── reference: nil
        │       │   ├── then_keyword_loc: nil
        │       │   ├── statements: nil
        │       │   └── subsequent: nil
        │       ├── else_clause: nil
        │       ├── ensure_clause: nil
        │       └── end_keyword_loc: (0,61)-(0,64) = "end"
        ├── statements: (1 item)
        │   └── @ ERBContentNode (location: (1:11)-(1:32))
        │       ├── tag_opening: "<%=" (location: (1:11)-(1:14))
        │       ├── content: " dangerous_call " (location: (1:14)-(1:30))
        │       ├── tag_closing: "%>" (location: (1:30)-(1:32))
        │       ├── parsed: true
        │       ├── valid: true
        │       └── prism_node: 
        │           └── @ CallNode (location: (0,15)-(0,29))
        │               ├── CallNodeFlags: variable_call, ignore_visibility
        │               ├── receiver: nil
        │               ├── call_operator_loc: nil
        │               ├── name: :dangerous_call
        │               ├── message_loc: (0,15)-(0,29) = "dangerous_call"
        │               ├── opening_loc: nil
        │               ├── arguments: nil
        │               ├── closing_loc: nil
        │               ├── equal_loc: nil
        │               └── block: nil
        ├── rescue_clause: 
        │   └── @ ERBRescueNode (location: (1:32)-(1:58))
        │       ├── tag_opening: "<%" (location: (1:32)-(1:34))
        │       ├── content: " rescue " (location: (1:34)-(1:42))
        │       ├── tag_closing: "%>" (location: (1:42)-(1:44))
        │       ├── statements: (1 item)
        │       │   └── @ ERBContentNode (location: (1:44)-(1:58))
        │       │       ├── tag_opening: "<%=" (location: (1:44)-(1:47))
        │       │       ├── content: " \"error\" " (location: (1:47)-(1:56))
        │       │       ├── tag_closing: "%>" (location: (1:56)-(1:58))
        │       │       ├── parsed: true
        │       │       ├── valid: true
        │       │       └── prism_node: 
        │       │           └── @ StringNode (location: (0,48)-(0,55))
        │       │               ├── StringFlags: nil
        │       │               ├── opening_loc: (0,48)-(0,49) = "\""
        │       │               ├── content_loc: (0,49)-(0,54) = "error"
        │       │               ├── closing_loc: (0,54)-(0,55) = "\""
        │       │               └── unescaped: "error"
        │       └── subsequent: ∅
        │   
        ├── else_clause: ∅
        ├── ensure_clause: ∅
        └── end_node: 
            └── @ ERBEndNode (location: (1:58)-(1:67))
                ├── tag_opening: "<%" (location: (1:58)-(1:60))
                ├── content: " end " (location: (1:60)-(1:65))
                └── tag_closing: "%>" (location: (1:65)-(1:67))
