rust/tests/snapshots/prism_nodes_test__expression_inside_html.snap
---
source: tests/prism_nodes_test.rs
expression: result.inspect()
---
@ DocumentNode (location: (1:0)-(1:50))
└── children: (1 item)
    └── @ HTMLElementNode (location: (1:0)-(1:50))
        ├── open_tag: 
        │   └── @ HTMLOpenTagNode (location: (1:0)-(1:30))
        │       ├── tag_opening: "<" (location: (1:0)-(1:1))
        │       ├── tag_name: "div" (location: (1:1)-(1:4))
        │       ├── tag_closing: ">" (location: (1:29)-(1:30))
        │       ├── children: (1 item)
        │       │   └── @ HTMLAttributeNode (location: (1:5)-(1:29))
        │       │       ├── name: 
        │       │       │   └── @ HTMLAttributeNameNode (location: (1:5)-(1:10))
        │       │       │       └── children: (1 item)
        │       │       │           └── @ LiteralNode (location: (1:5)-(1:10))
        │       │       │               └── content: "class"
        │       │       │   
        │       │       ├── equals: "=" (location: (1:10)-(1:11))
        │       │       └── value: 
        │       │           └── @ HTMLAttributeValueNode (location: (1:11)-(1:29))
        │       │               ├── open_quote: "\"" (location: (1:11)-(1:12))
        │       │               ├── children: (1 item)
        │       │               │   └── @ ERBContentNode (location: (1:12)-(1:28))
        │       │               │       ├── tag_opening: "<%=" (location: (1:12)-(1:15))
        │       │               │       ├── content: " css_class " (location: (1:15)-(1:26))
        │       │               │       ├── tag_closing: "%>" (location: (1:26)-(1:28))
        │       │               │       ├── parsed: true
        │       │               │       ├── valid: true
        │       │               │       └── prism_node: 
        │       │               │           └── @ CallNode (location: (0,16)-(0,25))
        │       │               │               ├── CallNodeFlags: variable_call, ignore_visibility
        │       │               │               ├── receiver: nil
        │       │               │               ├── call_operator_loc: nil
        │       │               │               ├── name: :css_class
        │       │               │               ├── message_loc: (0,16)-(0,25) = "css_class"
        │       │               │               ├── opening_loc: nil
        │       │               │               ├── arguments: nil
        │       │               │               ├── closing_loc: nil
        │       │               │               ├── equal_loc: nil
        │       │               │               └── block: nil
        │       │               ├── close_quote: "\"" (location: (1:28)-(1:29))
        │       │               └── quoted: true
        │       └── is_void: false
        │   
        ├── tag_name: "div" (location: (1:1)-(1:4))
        ├── body: (1 item)
        │   └── @ ERBContentNode (location: (1:30)-(1:44))
        │       ├── tag_opening: "<%=" (location: (1:30)-(1:33))
        │       ├── content: " content " (location: (1:33)-(1:42))
        │       ├── tag_closing: "%>" (location: (1:42)-(1:44))
        │       ├── parsed: true
        │       ├── valid: true
        │       └── prism_node: 
        │           └── @ CallNode (location: (0,34)-(0,41))
        │               ├── CallNodeFlags: variable_call, ignore_visibility
        │               ├── receiver: nil
        │               ├── call_operator_loc: nil
        │               ├── name: :content
        │               ├── message_loc: (0,34)-(0,41) = "content"
        │               ├── opening_loc: nil
        │               ├── arguments: nil
        │               ├── closing_loc: nil
        │               ├── equal_loc: nil
        │               └── block: nil
        ├── close_tag: 
        │   └── @ HTMLCloseTagNode (location: (1:44)-(1:50))
        │       ├── tag_opening: "</" (location: (1:44)-(1:46))
        │       ├── tag_name: "div" (location: (1:46)-(1:49))
        │       ├── children: []
        │       └── tag_closing: ">" (location: (1:49)-(1:50))
        │   
        ├── is_void: false
        ├── element_source: "HTML"
        └── escape_content: true
