rust/tests/snapshots/prism_nodes_test__expression_tag_with_instance_variable.snap
---
source: tests/prism_nodes_test.rs
expression: result.inspect()
---
@ DocumentNode (location: (1:0)-(1:12))
└── children: (1 item)
    └── @ ERBContentNode (location: (1:0)-(1:12))
        ├── tag_opening: "<%=" (location: (1:0)-(1:3))
        ├── content: " @name " (location: (1:3)-(1:10))
        ├── tag_closing: "%>" (location: (1:10)-(1:12))
        ├── parsed: true
        ├── valid: true
        └── prism_node: 
            └── @ InstanceVariableReadNode (location: (0,4)-(0,9))
                └── name: :@name
