rust/tests/snapshots/prism_nodes_test__nested_if_inside_each.snap
---
source: tests/prism_nodes_test.rs
expression: result.inspect()
---
@ DocumentNode (location: (1:0)-(1:82))
└── children: (1 item)
    └── @ ERBBlockNode (location: (1:0)-(1:82))
        ├── tag_opening: "<%" (location: (1:0)-(1:2))
        ├── content: " items.each do |item| " (location: (1:2)-(1:24))
        ├── tag_closing: "%>" (location: (1:24)-(1:26))
        ├── prism_node: 
        │   └── @ CallNode (location: (0,3)-(0,79))
        │       ├── CallNodeFlags: nil
        │       ├── receiver:
        │       │   @ CallNode (location: (0,3)-(0,8))
        │       │   ├── CallNodeFlags: variable_call, ignore_visibility
        │       │   ├── receiver: nil
        │       │   ├── call_operator_loc: nil
        │       │   ├── name: :items
        │       │   ├── message_loc: (0,3)-(0,8) = "items"
        │       │   ├── opening_loc: nil
        │       │   ├── arguments: nil
        │       │   ├── closing_loc: nil
        │       │   ├── equal_loc: nil
        │       │   └── block: nil
        │       ├── call_operator_loc: (0,8)-(0,9) = "."
        │       ├── name: :each
        │       ├── message_loc: (0,9)-(0,13) = "each"
        │       ├── opening_loc: nil
        │       ├── arguments: nil
        │       ├── closing_loc: nil
        │       ├── equal_loc: nil
        │       └── block:
        │           @ BlockNode (location: (0,14)-(0,79))
        │           ├── locals: [:item]
        │           ├── parameters:
        │           │   @ BlockParametersNode (location: (0,17)-(0,23))
        │           │   ├── parameters:
        │           │   │   @ ParametersNode (location: (0,18)-(0,22))
        │           │   │   ├── requireds: (length: 1)
        │           │   │   │   └── @ RequiredParameterNode (location: (0,18)-(0,22))
        │           │   │   │       ├── ParameterFlags: nil
        │           │   │   │       └── name: :item
        │           │   │   ├── optionals: (length: 0)
        │           │   │   ├── rest: nil
        │           │   │   ├── posts: (length: 0)
        │           │   │   ├── keywords: (length: 0)
        │           │   │   ├── keyword_rest: nil
        │           │   │   └── block: nil
        │           │   ├── locals: (length: 0)
        │           │   ├── opening_loc: (0,17)-(0,18) = "|"
        │           │   ├── closing_loc: (0,22)-(0,23) = "|"
        │           ├── body:
        │           │   @ StatementsNode (location: (0,29)-(0,70))
        │           │   └── body: (length: 1)
        │           │       └── @ IfNode (location: (0,29)-(0,70))
        │           │           ├── if_keyword_loc: (0,29)-(0,31) = "if"
        │           │           ├── predicate:
        │           │           │   @ CallNode (location: (0,32)-(0,45))
        │           │           │   ├── CallNodeFlags: nil
        │           │           │   ├── receiver:
        │           │           │   │   @ LocalVariableReadNode (location: (0,32)-(0,36))
        │           │           │   │   ├── name: :item
        │           │           │   │   └── depth: 0
        │           │           │   ├── call_operator_loc: (0,36)-(0,37) = "."
        │           │           │   ├── name: :visible?
        │           │           │   ├── message_loc: (0,37)-(0,45) = "visible?"
        │           │           │   ├── opening_loc: nil
        │           │           │   ├── arguments: nil
        │           │           │   ├── closing_loc: nil
        │           │           │   ├── equal_loc: nil
        │           │           │   └── block: nil
        │           │           ├── then_keyword_loc: nil
        │           │           ├── statements: nil
        │           │           ├── subsequent: nil
        │           │           └── end_keyword_loc: (0,67)-(0,70) = "end"
        │           ├── opening_loc: (0,14)-(0,16) = "do"
        │           └── closing_loc: (0,76)-(0,79) = "end"
        ├── body: (1 item)
        │   └── @ ERBIfNode (location: (1:26)-(1:73))
        │       ├── tag_opening: "<%" (location: (1:26)-(1:28))
        │       ├── content: " if item.visible? " (location: (1:28)-(1:46))
        │       ├── tag_closing: "%>" (location: (1:46)-(1:48))
        │       ├── then_keyword: ∅
        │       ├── prism_node: 
        │       │   └── @ IfNode (location: (0,29)-(0,70))
        │       │       ├── if_keyword_loc: (0,29)-(0,31) = "if"
        │       │       ├── predicate:
        │       │       │   @ CallNode (location: (0,32)-(0,45))
        │       │       │   ├── CallNodeFlags: nil
        │       │       │   ├── receiver:
        │       │       │   │   @ LocalVariableReadNode (location: (0,32)-(0,36))
        │       │       │   │   ├── name: :item
        │       │       │   │   └── depth: 0
        │       │       │   ├── call_operator_loc: (0,36)-(0,37) = "."
        │       │       │   ├── name: :visible?
        │       │       │   ├── message_loc: (0,37)-(0,45) = "visible?"
        │       │       │   ├── opening_loc: nil
        │       │       │   ├── arguments: nil
        │       │       │   ├── closing_loc: nil
        │       │       │   ├── equal_loc: nil
        │       │       │   └── block: nil
        │       │       ├── then_keyword_loc: nil
        │       │       ├── statements: nil
        │       │       ├── subsequent: nil
        │       │       └── end_keyword_loc: (0,67)-(0,70) = "end"
        │       ├── statements: (1 item)
        │       │   └── @ ERBContentNode (location: (1:48)-(1:64))
        │       │       ├── tag_opening: "<%=" (location: (1:48)-(1:51))
        │       │       ├── content: " item.name " (location: (1:51)-(1:62))
        │       │       ├── tag_closing: "%>" (location: (1:62)-(1:64))
        │       │       ├── parsed: true
        │       │       ├── valid: true
        │       │       └── prism_node: 
        │       │           └── @ CallNode (location: (0,52)-(0,61))
        │       │               ├── CallNodeFlags: nil
        │       │               ├── receiver:
        │       │               │   @ LocalVariableReadNode (location: (0,52)-(0,56))
        │       │               │   ├── name: :item
        │       │               │   └── depth: 0
        │       │               ├── call_operator_loc: (0,56)-(0,57) = "."
        │       │               ├── name: :name
        │       │               ├── message_loc: (0,57)-(0,61) = "name"
        │       │               ├── opening_loc: nil
        │       │               ├── arguments: nil
        │       │               ├── closing_loc: nil
        │       │               ├── equal_loc: nil
        │       │               └── block: nil
        │       ├── subsequent: ∅
        │       └── end_node: 
        │           └── @ ERBEndNode (location: (1:64)-(1:73))
        │               ├── tag_opening: "<%" (location: (1:64)-(1:66))
        │               ├── content: " end " (location: (1:66)-(1:71))
        │               └── tag_closing: "%>" (location: (1:71)-(1:73))
        ├── block_arguments: (1 item)
        │   └── @ RubyParameterNode (location: (1:18)-(1:22))
        │       ├── name: "item" (location: (1:18)-(1:22))
        │       ├── default_value: ∅
        │       ├── kind: "positional"
        │       └── required: true
        ├── rescue_clause: ∅
        ├── else_clause: ∅
        ├── ensure_clause: ∅
        └── end_node: 
            └── @ ERBEndNode (location: (1:73)-(1:82))
                ├── tag_opening: "<%" (location: (1:73)-(1:75))
                ├── content: " end " (location: (1:75)-(1:80))
                └── tag_closing: "%>" (location: (1:80)-(1:82))
